--- a/okolie.html
+++ b/okolie.html
@@ -20,11 +20,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500;1,800&family=Source+Sans+Pro:ital,wght@0,400;0,600;1,300&display=swap" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
         <link href="okolie.css" rel="stylesheet" type="text/css"/>
         <script src="okolie.js" type="text/javascript"></script>
     </head>
     <body>
-        <header >
+         <header >
             <div class="flex-container">
                 <div class="nav-list-header">
                     <div class="menu-social">
@@ -35,17 +36,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                         </div>
                     </div > 
                     <div class="nav-menu">
-                        <input type="checkbox" id="check">
-                        <label for="check" class="checkbtn">
-                            <i class="fas fa-bars"></i>
-                        </label>
-                        <ul class="navigation">
-                            <li class="nav-list"  style="flex-grow: 1"><a class="active" href="index.html"><strong>Úvod</strong></a></li>
+                        <ul class="navigation" id="myTopnav">
+                            <li class="nav-list"  style="flex-grow: 1"><a class="nav-link" href="index.html"><strong>Úvod</strong></a></li>
                             <li class="nav-list"  style="flex-grow: 1"><a class="nav-link" href="ubytovanie.html"><strong>Ubytovanie</strong></a></li>
                             <li class="nav-list"  style="flex-grow: 1"><a class="nav-link"  href="okolie.html"><strong>Okolie</strong></a></li>
                             <li class="nav-list"  style="flex-grow: 1"><a  class="nav-link"  href="cennik.html"><strong>Cenník</strong></a></li>
                             <li class="nav-list"  style="flex-grow: 1"><a class="nav-link"  href="kontakt.html"><strong>Kontakt</strong></a></li>
                         </ul>
+                        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                            <i class="fa fa-bars"></i>
+                        </a>
                     </div> 
                     <ul class="slideshow">
                         <li><span>1</span></li>
@@ -56,7 +56,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                         <img class="logo" src="img/logo/logo-biela1.png" alt=""/>
                     </div>                  
                 </div>
-                <p  class="text1"><strong>Ubytovanie, ktoré má<i class="fa-solid fa-heart fa-beat" style="--fa-animation-duratio: 2s;"></i></strong> &nbsp; !</p>
+                <p class="text1"><strong>Ubytovanie, ktoré má<i class="fa-solid fa-heart fa-beat" style="--fa-animation-duratio: 2s;"></i></strong> !</p>
             </div>
         </header>
         <section class="container-okolie-ciernohronska-zeleznicka" style="position: relative; height: auto;">
