--- a/index.html
+++ b/index.html
@@ -25,39 +25,35 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <header >
-            <div class="flex-container">
-                <div class="nav-list-header">
-                    <div class="menu-social">
-                        <div><a href="https://www.facebook.com/vilaflaviaciernybalog" class="social-icon"><i class="fa-brands fa-square-facebook"></i></a></div>
-                        <div class="personal">
-                            <div><i class="fa-solid fa-phone fa-1x" style="flex-grow: 1"></i><a href="tel: +421911146979"> +421 911 146 979</a></div>
-                            <div><i class="fa-solid fa-envelope fa-1x" style="flex-grow: 1"></i><a href="mailto:vilaflaviaciernybalog@gmail.com"> vilaflaviaciernybalog@gmail.com</a></div>
-                        </div>
-                    </div > 
-                    <div class="nav-menu">
-                        <ul class="navigation" id="myTopnav">
-                            <li class="nav-list"  style="flex-grow: 1"><a class="nav-link" href="index.html"><strong>Úvod</strong></a></li>
-                            <li class="nav-list"  style="flex-grow: 1"><a class="nav-link" href="ubytovanie.html"><strong>Ubytovanie</strong></a></li>
-                            <li class="nav-list"  style="flex-grow: 1"><a class="nav-link"  href="okolie.html"><strong>Okolie</strong></a></li>
-                            <li class="nav-list"  style="flex-grow: 1"><a  class="nav-link"  href="cennik.html"><strong>Cenník</strong></a></li>
-                            <li class="nav-list"  style="flex-grow: 1"><a class="nav-link"  href="kontakt.html"><strong>Kontakt</strong></a></li>
-                        </ul>
-                        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                            <i class="fa fa-bars"></i>
-                        </a>
-                    </div> 
-                    <ul class="slideshow">
-                        <li><span>1</span></li>
-                        <li><span>2</span></li>
-                        <li><span>3</span></li>
+            <div class="nav-list-header">
+                <div class="menu-social">
+                    <div><a href="https://www.facebook.com/vilaflaviaciernybalog" class="social-icon"><i class="fa-brands fa-square-facebook"></i></a></div>
+                </div > 
+                <div class="nav-menu">
+                    <ul class="navigation" id="myTopnav">
+                        <li class="nav-list"  style="flex-grow: 1"><a class="nav-link" href="index.html"><strong>Úvod</strong></a></li>
+                        <li class="nav-list"  style="flex-grow: 1"><a class="nav-link" href="ubytovanie.html"><strong>Ubytovanie</strong></a></li>
+                        <li class="nav-list"  style="flex-grow: 1"><a class="nav-link"  href="okolie.html"><strong>Okolie</strong></a></li>
+                        <li class="nav-list"  style="flex-grow: 1"><a  class="nav-link"  href="cennik.html"><strong>Cenník</strong></a></li>
+                        <li class="nav-list"  style="flex-grow: 1"><a class="nav-link"  href="kontakt.html"><strong>Kontakt</strong></a></li>
                     </ul>
-                    <div class="logo">
-                        <img class="logo" src="img/logo/logo-biela1.png" alt=""/>
-                    </div>                  
-                </div>
-                <p class="text1"><strong>Ubytovanie, ktoré má<i class="fa-solid fa-heart fa-beat" style="--fa-animation-duratio: 2s;"></i></strong> !</p>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </div> 
             </div>
         </header>
+        <section class="slide">
+            <ul class="slideshow">
+                <li><span>1</span></li>
+                <li><span>2</span></li>
+                <li><span>3</span></li>
+            </ul>
+            <div class="logo">
+                <img class="logo" src="img/logo/logo-biela1.png" alt=""/>
+            </div>                  
+            <p class="text1"><strong>Ubytovanie, ktoré má<i class="fa-solid fa-heart fa-beat" style="--fa-animation-duratio: 2s;"></i></strong> !</p>
+        </section>
         <section class="container1" style="position: relative; height: auto;">
             <div class="uvod"  >
                 <p class="text2" style="flex-grow: 1"><strong>Vila Flavia</strong><br>sa nachádza v rozľahlej obci Čierny Balog, v srdci Veporských vrchov, asi 4 km južne od Brezna. Tvorí ju 13 osád, situovaných pozdĺž toku Čierneho Hrona a v priľahlých údoliach, obkolesených hustými lesmi.<br>
@@ -147,6 +143,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         </section>
         <footer>
             <div class="container-footer">
+                <div class="personal">
+                    <div><i class="fa-solid fa-phone fa-1x" style="flex-grow: 1"></i><a class="personal1" href="tel: +421911146979"> +421 911 146 979</a></div>
+                    <div><i class="fa-solid fa-envelope fa-1x" style="flex-grow: 1"></i><a  class="personal1" href="mailto:vilaflaviaciernybalog@gmail.com"> vilaflaviaciernybalog@gmail.com</a></div>
+                </div>
                 <div class="kontakt" id="kontakt">
                     <p><strong>ADRESA:</strong><br>
                         Hlavná 193/21<br>
@@ -156,10 +156,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <div class="copy">
                     <p>Martina Prasličková&copy;2022</p>
                 </div> 
-            </div>
-            <a href="#" id="button" >
-                <i class="fa-solid fa-arrow-up fa-2x"></i>
-            </a>
+                <a href="#" id="button" >
+                    <i class="fa-solid fa-arrow-up fa-2x"></i>
+                </a>
         </footer>
     </body>
 </html>
