--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <p><i><q> Veľmi príjemné, plne vybavené, veľké, priestranné a čisté ubytovanie, ešte s lepšou pani domácou! Majtelia sú veľmi milí, ústretoví a pohostinní ľudia. K plusom určite patrí aj umývačka riadu.</q></i></p>
                 </div>
                 <div class="recenzia3"><p style="color:#666666"><b>Aida (priatelia) 22. apríl 2022</b></p>
-                    <p><i><q>Všetko bolo úplne skvelé. Čistota a poriadok top. Praktické vybavenie, veľké priestory avšak stále útulná atmosféra. Skratka na jednotku a vrelo odporúčam aj pre psíčkarov :)</q></i></p>
+                    <p><i><q>Všetko bolo úplne skvelé. Čistota a poriadok top. Praktické vybavenie, veľké priestory avšak stále útulná atmosféra. Skrátka na jednotku a vrelo odporúčam aj pre psíčkarov :)</q></i></p>
                     <p><i><q>Jedine frekventovanejšia hlavná cesta pred vilou, avšak nedokázala pokaziť celkový dojem</q></i></p>
                 </div>               
             </div>
@@ -153,12 +153,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         Čierny Balog<br>
                         976 52 </p>
                 </div>
-                <div class="copy">
-                    <p>Martina Prasličková&copy;2022</p>
-                </div> 
-                <a href="#" id="button" >
-                    <i class="fa-solid fa-arrow-up fa-2x"></i>
-                </a>
+            </div>
+            <div class="copy">
+                <p>Martina Prasličková&copy;2022</p>
+            </div> 
+            <a href="#" id="button" >
+                <i class="fa-solid fa-arrow-up fa-2x"></i>
+            </a>
         </footer>
     </body>
 </html>
