--- a/index.html
+++ b/index.html
@@ -74,39 +74,39 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <img class="border" src="img/ikons/border2 (1).png" alt=""/>
                 </p>
             </div>  
-        </section>
+        </section>       
         <section class="uvod2">
             <div class="grid-container">
                 <div class="item1">  
-                    <img src="img/ikons/organization (2).png" alt=""/>
+                    <img src="img/ikons/ikon/001-organization.png" alt=""/>
                     <p>Max. 20 osôb,<br> z toho 6 prísteliek</p>
                 </div>
                 <div class="item2">
-                    <img src="img/ikons/bedroom (1).png" alt=""/>
+                    <img src="img/ikons/ikon/004-bedroom.png" alt=""/>
                     <p>5 spální</p>
                 </div>
                 <div class="item3">
-                    <img src="img/ikons/bath (1).png" alt=""/>
+                    <img src="img/ikons/ikon/005-bathtub.png" alt=""/>
                     <p>5 kúpeľní,<br>5 x WC</p>
                 </div>  
                 <div class="item4">
-                    <img src="img/ikons/wifi-signal (1).png" alt=""/>
+                    <img src="img/ikons/ikon/003-wifi-router.png" alt=""/>
                     <p>Internet k dispozícii</p>
                 </div>
                 <div class="item5">
-                    <img src="img/ikons/parking-sign (1).png" alt=""/>
+                    <img src="img/ikons/ikon/006-parking.png" alt=""/>
                     <p>Parkovanie pri objekte</p>
                 </div>
                 <div class="item6">
-                    <img src="img/ikons/puppy (1).png" alt=""/>
+                    <img src="img/ikons/ikon/002-puppy.png" alt=""/>
                     <p>POVOLENÝ,<br> bez obmedzenia, za poplatok </p>
                 </div>
                 <div class="item7">
-                    <img src="img/ikons/family (2).png" alt=""/>
+                    <img src="img/ikons/ikon/007-family.png" alt=""/>
                     <p>Vhodné pre rodiny s deťmi</p>
                 </div>
                 <div class="item8">
-                    <img src="img/ikons/disabled (3).png" alt=""/>
+                    <img src="img/ikons/ikon/008-accessibility.png" alt=""/>
                     <p>Objekt nie je bezbariérový</p>
                 </div>
             </div>
