--- a/cennik.html
+++ b/cennik.html
@@ -60,31 +60,27 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <table class="cennik-1">
                     <tr>
                         <th>Sezóna</th>
-                        <th>Termín sezóny</th>
                         <th>Minimálny počet osôb</th>
                         <th>Minimálny počet nocí</th>
                         <th>Poznámka ubytovateľa</th>
-                        <th>Cena</th>
+                        <th> Cena osoba&nbsp;/&nbsp;noc</th>
                     </tr>
                     <tr>
                         <td>Celoročne</td>
-                        <td></td>
                         <td>min.8 osôb</td>
                         <td>min.2 noci</td>
                         <td>dospelý</td>
-                        <td>20 Eur<br>Osoba / noc</td>
+                        <td>20 Eur</td>
                     </tr>
                     <tr>
                         <td>Celoročne</td>
-                        <td></td>
                         <td>min. 8 osôb</td>
                         <td>min. 2 noci</td>
                         <td>6-12 rokov</td>
-                        <td>10 Eur<br>Osoba / noc</td>
+                        <td>10 Eur</td>
                     </tr>
                     <tr>
-                        <td>Silvester</td>
-                        <td>29. december -<br>2. január</td>
+                        <td>Silvester<strong> *</strong></td>
                         <td>min. 12 osôb</td>
                         <td>min. 4 noci</td>
                         <td></td>
@@ -93,6 +89,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </table>
             </div>
             <div class="cennik-2">
+                <p>*  termín - 29. december - 2. január</p>
                 <p>Cena ďalej zahŕňa: parkovanie, detská postieľka, posteľná bielizeň, uteráky, WiFi internet, drevo do krbu.</p>
                 <p>Pobyt s domácim zvieraťom: povolený, bez obmedzenia, za poplatok (po dohode s majiteľom).</p>
                 <p><b>Nástup na pobyt:</b> od 14:00 hod.</p>
