--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <div class="uvod"  >
                 <p class="text2" style="flex-grow: 1"><strong>Vila Flavia</strong><br>sa nachádza v rozľahlej obci Čierny Balog, v srdci Veporských vrchov, asi 4 km južne od Brezna. Tvorí ju 13 osád, situovaných pozdĺž toku Čierneho Hrona a v priľahlých údoliach, obkolesených hustými lesmi.<br>
                     Disponuje piatimi izbami pre maximálne 20 osôb. K dispozícii sú tri 2-lôžkové a dve 4-lôžkové izby. Súčasťou všetkých izieb je prístelka a kúpeľňa s toaletou a sprchovacím kútom.
-                    <img class="border" src="img/ikons/border2 (1).png" alt=""/>
+                    <img class="border" src="img1/ikons/border2 (1).png" alt=""/>
                 </p>
                 <div class="foto" style="flex-grow: 1">
                     <img  class="izba-foto1" src="img/exterier/budova700.png" alt=""/>
@@ -71,7 +71,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <img class="foto3" src="img/exterier/budova-ex1.png" alt=""/>
                 </div>
                 <p class="text3" style="flex-grow: 1" ><strong>Vila Flavia</strong><br>Vo vile máte k využitiu aj plne vybavenú kuchyňu spojenú s jedálňou a vináreň s posedením, televízorom a krbom. Niektoré izby majú aj balkón.  Deti sa zahrajú v detskom kútiku plnom hračiek. V exteriéri možno usporiadať grilovačku s varením gulášu pre cca 20 osôb. Svoje autá zaparkujete priamo pri objekte.
-                    <img class="border" src="img/ikons/border2 (1).png" alt=""/>
+                    <img class="border" src="img1/ikons/border2 (1).png" alt=""/>
                 </p>
             </div>  
         </section>       
