--- a/ubytovanie.html
+++ b/ubytovanie.html
@@ -66,9 +66,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <section class="container1" style="position: relative; height: auto;" >
             <article class="izba-cislo-1">
                 <div class="text-izba-c-1" style="flex-grow: 1">
-                    <p><strong>Izba č. 1</strong></p><p>Izba sa nachádza na 2. poschodí, je bez balkónu. Má 2 pevné lôžka + 1 prístelka. Izba má vlastné sociálne zariadenie.<br>1x Kúpeľňa: WC, Umývadlo, Sprchovací kút, Uteráky.<br> </p>
-                    <img class="border" src="img/ikons/border2 (1).png" alt=""/>
-
+                    <p><strong>Izba č. 1</strong></p><p>Izba sa nachádza na 2. poschodí, je bez balkónu. Má 2 pevné lôžka + 1 prístelka. Izba má vlastné sociálne zariadenie.<br>1x Kúpeľňa: WC, Umývadlo, Sprchovací kút, Uteráky.<br> 
+                        <img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
                 </div>
                 <div class="thumbnails1">
                     <div class="figure1">
@@ -98,8 +97,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <article class="izba-cislo-2">
                 <div class="text-izba-c-2" style="flex-grow: 1" >
                     <p><strong>Izba č. 2</strong></p><p>Izba sa nachádza na 2. poschodí, je bez balkónu. Má 4 pevné lôžka + 1 až 2 prístelky. Izba má vlastné sociálne zariadenie.<br>1x Kúpeľňa: WC, Umývadlo, Sprchovací kút, Uteráky.<br>
-                        <img class="border" src="img/ikons/border2 (1).png" alt=""/>
-                    </p>
+                        <img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
                 </div>
                 <div class="thumbnails2">
                     <div class="figure2">
@@ -129,8 +127,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <article class="izba-cislo-3">
                 <div class="text-izba-c-3" style="flex-grow: 1" >
                     <p><strong>Izba č. 3</strong></p><p>Izba s balkónom sa nachádza na 2. poschodí. Má 4 pevné lôžka + 1 až 2 prístelky. Izba má vlastné sociálne zariadenie.<br>1x Kúpeľňa: WC, Umývadlo, Sprchovací kút, Uteráky.<br>
-                        <img class="border" src="img/ikons/border2 (1).png" alt=""/>
-                    </p>
+                        <img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
                 </div>
                 <div class="thumbnails3">
                     <div class="figure3">
@@ -160,8 +157,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <article class="izba-cislo-4">
                 <div class="text-izba-c-4" style="flex-grow: 1" >
                     <p><strong>Izba č. 4</strong></p><p>Izba s balkónom sa nachádza na 2. poschodí. Má 2 pevné lôžka + 1 prístelka. Izba má vlastné sociálne zariadenie.<br>1x Kúpeľňa: WC, Umývadlo, Sprchovací kút, Uteráky.<br>
-                        <img class="border" src="img/ikons/border2 (1).png" alt=""/>
-                    </p>
+                        <img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
                 </div>
                 <div class="thumbnails4">
                     <div class="figure4">
@@ -191,12 +187,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <article class="vinaren-jedalen-kutik-kuchyna">
                 <div class="kuchyna" style="flex-grow: 1" >
                     <p><strong>Kuchyňa</strong></p><p>Nachádza sa na 1. poschodí a je prepojená s jedálňou.<br>Vybavenie: Chladnička, Mikrovlnná rúra, Rýchlovarná kanvica, Jedálenské posedenie, Plynový sporák.</p>
-                    <img class="border" src="img/ikons/border2 (1).png" alt=""/>
-
+                    <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
                 </div>
                 <div class="vinaren" style="flex-grow: 1">
                     <p><strong>Spoločenská miestnosť s vinárňou</strong></p><p>Vináreň so spoločenskou miestnosťou sa nachádza na prízemí.<br>Vybavenie: Jedálenské posedenie, Krb / Kachle, Televízor.</p>
-                    <img class="border" src="img/ikons/border2 (1).png" alt=""/>
+                    <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
 
                 </div>
                 <!-- Start WOWSlider.com BODY section -->
@@ -234,14 +229,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <script type="text/javascript" src="engine1/wowslider.js"></script>
                 <script type="text/javascript" src="engine1/script.js"></script>
                 <!-- End WOWSlider.com BODY section -->
-                <div class="jedalen" style="flex-grow: 1" >
-                    <p><strong>Jedáleň</strong></p><p>Jedáleň sa nachádza na 1. poschodí. Je prepojená s kuchyňou.</p>
-                    <img class="border" src="img/ikons/border2 (1).png" alt=""/>
 
+                <div class="jedalen" style="flex-grow: 1">
+                    <p><strong>Jedáleň</strong></p><p>Jedáleň sa nachádza na 1. poschodí. Je prepojená s kuchyňou.</p>
+                    <p><img class="border" src="img1/ikons/border2 (1).png" alt=""></p>
                 </div>
                 <div class="detsky-kutik">
                     <p><strong>Detský kútik</strong></p><p>Nesmieme zabudnúť ani na tých najmenších.🙂Detský kútik plný hračiek sa nachádza na 1. poschodí.</p>
-                    <img class="border" src="img/ikons/border2 (1).png" alt=""/>
+                    <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
 
                 </div>
             </article>  
