--- a/okolie.html
+++ b/okolie.html
@@ -57,7 +57,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         </section>
         <section class="container-okolie-ciernohronska-zeleznicka" style="position: relative; height: auto;">
             <div class="okolie-ciernohronska-zeleznicka"><p><strong>Čiernohronská železnica</strong></p><p>V súčasnosti <a class="okolie-ciernohronska-zeleznicka-odkaz" href="https://www.chz.sk/"><b>Čiernohronská železnica</b></a> premáva denne počas letnej turistickej sezóny. Prevádzka je zabezpečovaná na úseku trate z Chvatimechu do Čierneho Balogu, do Vydrovskej doliny a do Dobroče (spolu 19 km). V roku 2012 bola s podporou Európskej Únie otvorená obnovená trať z Čierneho Balogu do miestnej časti Dobroč. Mimoriadne jazdy je možné si objednať kedykoľvek! <br>  Lesná železnica, v minulosti odsúdená na zánik, dnes patrí k najvyhľadávanejším turistickým atrakciám v regióne.</p>
-                <p><img class="border" src="img/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
             </div>
         </section>
         <section class="container-okolie-ciernohronska-zeleznicka-foto" style="position: relative; height: auto;">
@@ -81,13 +81,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <section class="container-okolie-cyklodrezina" style="position: relative; height: auto;">
             <div class="okolie-cyklodrezina">
                 <p><strong>Horehronské cyklodreziny</strong></p><p>Na úzkokoľajovej trati medzi obcami Hronec a Čierny Balog, kde premávala parná Čiernohronská železnička vznikol ďalší unikát. A to <a class="okolie-cyklodrezina-odkaz" href="https://horehronie.sk/cyklodreziny-hronec-sanske"><b>Horehronské cyklodreziny</b></a> (ľahké koľajové vozidlo, poháňané silou na princípe bicyklovania). Turisti ale aj domáci návštevníci sa tak môžu po prvý krát na Slovensku bicyklovať aj po koľajniciach.<br>Trasa vedie po železničnej trati lesnej úzkokoľajky Čiernohronskej železničky cez krasové územie popri meandroch Hrončianskej doliny s možnosťou prestupu na vláčik Čiernohronskej železničky počas hlavnej letnej sezóny, alebo piknikom v čarovnej prírode na zastávke Šánske s prístreškom.</p>
-                <p><img class="border" src="img/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
             </div>  
         </section>
         <section class="container-okolie-vydrovo" style="position: relative; height: auto;">
             <div class="okolie-vydrovo">
                 <p><strong>Lesnícky skanzen Vydrovo</strong></p><p><a class="okolie-vydrovo-odkaz" href="https://sk.wikipedia.org/wiki/Lesn%C3%ADcky_skanzen_Vydrovo"><b>Lesnícky skanzen Vydrovo</b></a> je jedinečné lesnícke múzeum v prírode, situované vo Vydrovskej doline pri Čiernom Balogu.<br>Návštevníkom ponúka oddych, poučenie a zábavu prostredníctvom exponátov popri viac ako 4 km dlhom náučnom chodníku. Vystavené exponáty sa viažu na prácu lesných robotníkov a tak nechýbajú horáreň, kaplnka, dočasné príbytky a prístrešky, maringotky, mechanizmy a zariadenia využívané pri ťažbe dreva, parná lokomotíva so súpravou vagónov, no i vodná píla, lesná škôlka a edukačné centrum.</p>
-                <p><img class="border" src="img/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
             </div>
         </section>
         <section class="container-okolie-vydrovo-foto" style="position: relative; height: auto;">
@@ -111,13 +111,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <section class="container-okolie-ski-cierny-balog" style="position: relative; height: auto;">
             <div class="okolie-ski-cierny-balog">
                 <p><strong>Ski Čierny Balog</strong></p><p>Lyžiarske stredisko <a class="okolie-ski-cierny-balog-odkaz" href="https://skiciernybalog.sk/"><b>Ski Čierny Balog</b></a> sa nachádza v nadmorskej výške 559 – 809. Od okresného mesta Brezno, je vzdialené len 10 km. Prepravu lyžiarov zabezpečujú 3 vleky. Ľahké a stredne náročné zjazdové trate dosahujú celkovú dĺžku 5 km. Stredisko má vybudovaný systém technického zasnežovania.<br>Pri vrchole tratí je počas sezóny prevádzkovaný bufet, v údolí koliba s regionálnymi špecialitami. Návštevníci strediska majú k dispozícii požičovňu a servis lyží a snowboardov, lyžiarsku a snb školu.</p>
-                <p><img class="border" src="img/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
             </div>
         </section>
         <section class="container-okolie-bystrianska-jaskyna" style="position: relative; height: auto;">
             <div class="okolie-bystrianska-jaskyna">
                 <p><strong>Bystrianska jaskyňa</strong></p><p><a class="okolie-bystrianska-jaskyna-odkaz" href="https://sk.wikipedia.org/wiki/Bystrianska_jasky%C5%88a"><b>Bystrianska jaskyňa</b></a> je najväčšou jaskyňou južnej strany Nízkych Tatier. Nachádza sa v Bystrianskom krase v južnej časti Národného parku Nízke Tatry, pri obci Bystrá. <br>Tvorí ju Stará a Nová jaskyňa s celkovou dĺžkou vyše 3km a má priepasťový charakter. Prehliadková trasa má dĺžku 580 m a je takmer bez prevýšenia. Jaskyňa je prístupná aj pre imobilných návštevníkov. Prehliadka trvá 45 minút.<br>Niektoré časti podzemia Bystrianskej jaskyne sa využívajú aj na speleoterapiu.</p>
-                <p><img class="border" src="img/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
             </div>
         </section>
         <section class="container-okolie-bystrianska-jaskyna-foto" style="position: relative; height: auto;">
@@ -141,13 +141,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <section class="container-okolie-nizke-tatry" style="position: relative; height: auto;">
             <div class="okolie-nizke-tatry">
                 <p><strong>Nízke Tatry</strong></p><p>Chopok, Ďumbier, Dereše, Poľana... Na potulkách za vrchmi <a class="okolie-nizke-tatry-odkaz" href="https://sk.wikipedia.org/wiki/N%C3%ADzke_Tatry"><b>Nízkych Tatier</b></a> zažijete úžasné túry s dokonalými výhľadmi.<br>Jedným zo symbolov Nízkych Tatier je Ďumbier. Ide o najvyšší štít celého pohoria (2043 m. n. m.), na vrchole ktorého tróni drevený dvojkríž.<br>V Národnom parku Nízke Tatry a jeho ochrannom pásme je peším turistom k dispozícii viac než 840 km značených turistických trás a 15 náučných chodníkov.</p> 
-                <p><img class="border" src="img/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
             </div>
         </section>
         <section class="container-okolie-tipy" style="position: relative; height: auto;">
             <div class="okolie-tipy">
                 <p><strong>Tipy na výlety</strong></p><p>Región vďaka svojmu členitému terénu a rozmanitej prírode ponúka množstvo cyklotrás rôznej náročnosti, ktoré zaručujú  aktívny odpočinok pre náročných i rodiny s deťmi.<br>Kraj je známy aj množstvom kvalitných lyžiarskych či bežkárskych tratí a neskutočne bohatý na prírodné krásy, ale aj na turistické atrakcie, históriu a kultúru.<br>Horehronie, raj v Nízkych Tatrách, je tým dokonalým miestom pre aktívny oddych i relax.<p>Ďalšie tipy na výlety nájdete tu: <a href="https://www.horehronie.sk/"><b>Horehronie,</b> &nbsp; </a><a href="https://kamnahorehroni.sk/"><b>Kam na horehroní,</b> &nbsp; </a><a href="https://www.zahoramizadolami.sk/region-horehronie/?gclid=CjwKCAiA76-dBhByEiwAA0_s9bMNtrLBqC8POAq0rfXNLrJq14WdLbHGpc1qgw3MO5Ezt3NTI7W5xxoC1OwQAvD_BwE"><b>Za horami, za dolami.</b></a></p>
-                <p><img class="border" src="img/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
             </div>
         </section>
         <footer>
