--- a/kontakt.html
+++ b/kontakt.html
@@ -67,7 +67,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                     976 52 </p>
                 <div>
                     <h3 >Rezervácia ubytovania</h3>
-                    <p>Kontaktná osoba: Ivana Štulajterová</p>
+                    <p>Kontaktná osoba: Ivana Šaur Štulajterová</p>
                     <div class="fa-kontakt">
                         <p>Telefón: &nbsp; <a href="tel: +421911 146 979"> +421 911 146 979</a></p>
                         <p>E-mail: &nbsp; <a href="mailto:vilaflaviaciernybalog@gmail.com"> vilaflaviaciernybalog@gmail.com</a></p>
