--- a/cennik.html
+++ b/cennik.html
@@ -76,22 +76,30 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                     </tr>
                     <tr>
                         <td>Celoročne</td>
+                        <td>min.8 osôb</td>
+                        <td>min.2 noci</td>
+                        <td>dospelý</td>
+                        <td>20 Eur</td>
+                    </tr>
+                    <tr>
+                        <td>Celoročne</td>
                         <td>min. 8 osôb</td>
                         <td>min. 2 noci</td>
-                        <td>6-12 rokov</td>
+                        <td>3-12 rokov *</td>
                         <td>10 Eur</td>
                     </tr>
                     <tr>
-                        <td>Silvester<strong> *</strong></td>
-                        <td>min. 12 osôb</td>
-                        <td>min. 4 noci</td>
-                        <td></td>
-                        <td>450 Eur<br>Objekt / noc</td>
+                        <td>Celoročne</td>
+                        <td>min. 8 osôb</td>
+                        <td>1 noc</td>
+                        <td>dospelý</td>
+                        <td>30 Eur</td>
                     </tr>
                 </table>
             </div>
             <div class="cennik-2">
-                <p>*  termín - 29. december - 2. január</p>
+                <p>*  Dieťa do troch rokov - <b>zdarma</b>.</p>
+                <p>Sviatky (Silvester, Veľká noc...) - <b>cena na vyžiadanie</b>.</p>
                 <p>Cena ďalej zahŕňa: parkovanie, detská postieľka, posteľná bielizeň, uteráky, WiFi internet, drevo do krbu.</p>
                 <p>Pobyt s domácim zvieraťom: povolený, bez obmedzenia, za poplatok (po dohode s majiteľom).</p>
                 <p><b>Nástup na pobyt:</b> od 14:00 hod.</p>
