--- a/ubytovanie.html
+++ b/ubytovanie.html
@@ -98,7 +98,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <section class="container2" style="position: relative; height: auto;">
             <article class="izba-cislo-2">
                 <div class="text-izba-c-2" style="flex-grow: 1" >
-                    <p><strong>Izba č. 2</strong></p><p>Izba sa nachádza na 2. poschodí, je bez balkónu. Má 4 pevné lôžka + 1 až 2 prístelky. Izba má vlastné sociálne zariadenie.<br>1x Kúpeľňa: WC, Umývadlo, Sprchovací kút, Uteráky, Sprchový gél .<br>
+                    <p><strong>Izba č. 2</strong></p><p>Izba sa nachádza na 2. poschodí, je bez balkónu. Má 4 pevné lôžka + 1 až 2 prístelky. Izba má vlastné sociálne zariadenie.<br>1x Kúpeľňa: WC, Umývadlo, Sprchovací kút, Uteráky, Sprchový gél.<br>
                         <img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
                 </div>
                 <div class="thumbnails2">
@@ -185,31 +185,31 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </div>
             </article>
         </section>
-        <section class="container5" style="position: relative; height: auto;" >
+        <section class="container5" style="position: relative; height: auto;">
             <article class="izba-cislo-5">
-                <div class="text-izba-c-5" style="flex-grow: 1">
-                    <p><strong>Izba č. 5</strong></p><p>Izba sa nachádza na 2. poschodí, je bez balkónu. Má 2 pevné lôžka + 1 prístelka. Izba má vlastné sociálne zariadenie.<br>1x Kúpeľňa: WC, Umývadlo, Sprchovací kút, Uteráky, Sprchový gél.<br> 
-                        <img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
+                <div class="text-izba-c-5" style="flex-grow: 1" >
+                    <p><strong>Izba č. 5</strong></p><p>Izba sa nachádza na 2. poschodí, je bez balkónu. Má 2 pevné lôžka + 1 prístelka. Izba má vlastné sociálne zariadenie.<br>1x Kúpeľňa: WC, Umývadlo, Sprchovací kút, Uteráky, Sprchový gél.<br>
+                        <img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
                 </div>
                 <div class="thumbnails5">
                     <div class="figure5">
-                        <img src="img/izba5/izba5-2.webp" alt="izba č.5" style="width:100%"/>
+                        <img src="img/izba5/izba5-2.webp" alt="izba č.4" style="width:100%"/>
                     </div>
                     <div class="row ">
                         <div  class="column">
-                            <img src="img/izba5/izba5-2.webp" alt="izba č.5" style="width:100%"/>
+                            <img src="img/izba5/izba5-2.webp" alt="izba č.4" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba5/izba5.webp" alt="izba č.5" style="width:100%"/>
+                            <img src="img/izba5/izba5-3.webp" alt="izba č.4" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba5/izba5-3.webp" alt="izba č.5"  style="width: 100%"/>
+                            <img src="img/izba5/izba5-4.webp" alt="izba č.4"  style="width: 100%"/>
                         </div>
                         <div  class="column" >
-                            <img src="img/izba5/izba5-4 .webp" alt="izba č.5" style="width:100%"/>
+                            <img src="img/izba5/izba5-5jpg.webp" alt="izba č.4" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba5/izba5-5jpg .webp" alt="izba č.5" style="width:100%"/>
+                            <img src="img/izba5/izba5.webp" alt="izba č.4" style="width:100%"/>
                         </div>
                     </div>
                 </div>
@@ -218,7 +218,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <section class="container6"  style="position: relative; height: auto">
             <article class="vinaren-jedalen-kutik-kuchyna">
                 <div class="kuchyna" style="flex-grow: 1" >
-                    <p><strong>Kuchyňa</strong></p><p>Nachádza sa na 1. poschodí a je prepojená s jedálňou.<br>Vybavenie: Chladničky, Mikrovlnná rúra, Rýchlovarná kanvica, Jedálenské posedenie, Elektrický sporák.</p>
+                    <p><strong>Kuchyňa</strong></p><p>Nachádza sa na 1. poschodí a je prepojená s jedálňou.<br>Vybavenie: Chladnička, Mikrovlnná rúra, Rýchlovarná kanvica, Jedálenské posedenie, Plynový sporák.</p>
                     <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
                 </div>
                 <div class="vinaren" style="flex-grow: 1">
