--- a/ubytovanie.html
+++ b/ubytovanie.html
@@ -193,23 +193,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </div>
                 <div class="thumbnails5">
                     <div class="figure5">
-                        <img src="img/izba5/izba5-2.webp" alt="izba č.4" style="width:100%"/>
+                        <img src="izby/izba5-2.webp" alt="izba č.5" style="width:100%"/>
                     </div>
                     <div class="row ">
                         <div  class="column">
-                            <img src="img/izba5/izba5-2.webp" alt="izba č.4" style="width:100%"/>
+                            <img src="izby/izba5-2.webp" alt="izba č.5" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba5/izba5-3.webp" alt="izba č.4" style="width:100%"/>
+                            <img src="izby/izba5-3.webp" alt="izba č.5" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba5/izba5-4.webp" alt="izba č.4"  style="width: 100%"/>
+                            <img src="izby/izba5-4.webp" alt="izba č.5"  style="width: 100%"/>
                         </div>
                         <div  class="column" >
-                            <img src="img/izba5/izba5-5jpg.webp" alt="izba č.4" style="width:100%"/>
+                            <img src="izby/izba5-5jpg.webp" alt="izba č.5" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba5/izba5.webp" alt="izba č.4" style="width:100%"/>
+                            <img src="izby/izba5.webp" alt="izba č.5" style="width:100%"/>
                         </div>
                     </div>
                 </div>
